Решение проекта по теме: Тестирование и логирование. Дополнительно добавил плагин jacoco. Отключил выполнение 22-х сек. теста.